<?xml version="1.0"?>  
<package format="2">  
  <name>perfect_wall</name>  
  <version>0.1.0</version>  
  <description>The perfect_wall package creates a simulation of a perfect wall.</description>  

  <maintainer email="your_email@example.com">Your Name</maintainer>  

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>  

</package>  
